--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 
 <p>Niggas Are Black.</p>
 
-<p>‎ ‎ </p>
+
+<h4>By : </h4> 
+
+    <i class="fab fa-instagram fa-lg instagram-icon"></i>
+    <p>@indomyzz</p>
 </div>
     <script src="script.js"></script>
 </body>
