added my instagram @

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 
 <p>Niggas Are Black.</p>
 
-
+<div class="instagram-section">
+    <i class="fab fa-instagram fa-lg instagram-icon"></i>
+    <p class="instagram-handle">@indomyzz : The Wesite maker</p>
+</div>
+<p>‎ ‎ </p>
 
 </div>
     <script src="script.js"></script>
